# Racing

./: .clang-format  .gitignore  CMakeLists.txt
assets/skybox/: sky_diff.dds  sky_lut.dds  sky_spec.dds
engine/: CMakeLists.txt
engine/inc/: shader_data.hpp
engine/inc/core/: app.hpp  components.hpp  device.hpp  ecs.hpp  engine.hpp  input.hpp  renderer.hpp  scene.hpp  system.hpp
engine/inc/managers/: camera_manager.hpp  resource_manager.hpp  scene_manager.hpp
engine/inc/math/: math.hpp
engine/inc/render/: depth_prepass.hpp  gen_draws.hpp  geom_pass.hpp  render_pass.hpp  shadow_pass.hpp  skybox_pass.hpp
engine/inc/tools/: log.hpp
engine/src/: engine_pch.hpp
engine/src/core/: components.cpp  device.cpp  ecs.cpp  engine.cpp  input.cpp  renderer.cpp  scene.cpp
engine/src/managers/: camera_manager.cpp  resource_manager.cpp  scene_manager.cpp
engine/src/render/: depth_prepass.cpp  gen_draws.cpp  geom_pass.cpp  shadow_pass.cpp  skybox_pass.cpp
game/: CMakeLists.txt
game/src/: game.cpp
scripts/: functions.cmake  shaders.cmake
shaders/: common.slang  cull.slang  depth_prepass.slang  fill_draws.slang  gen_shaders.py  geom.slang  lighting.slang  lights.slang  shadows.slang  skybox.slang
